# gunpowder

./: .gitignore  Board.hpp  CMakeLists.txt  Engine.hpp  FastBoard.hpp  Group.hpp  MCTS.hpp  PlainMC.hpp  README.md  Timer.hpp  board_definitions.hpp  build_statistics.cpp  definitions.hpp  gunpowder.cpp  gunpowder_mcts.cpp  gunpowder_plainmc.cpp  inline_headers.rb  main.cpp
bkp/: Board.hpp  MCTS.hpp  MCTSEngine.hpp
